# namida

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
namida/include/: namida.h
namida/include/namida/: application.h  core.h  entry_point.h  log.h  namida.h  window.h
namida/include/namida/events/: application_event.h  event.h  key_event.h  mouse_event.h
namida/src/: application.cpp  log.cpp  namida.cpp  window.cpp
sandbox/src/: main.cpp  sandbox.cpp
